--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,13 +5,13 @@
 #unbind C-b
 
 # キーストロークのディレイを減らす
-#set -sg escape-time 1
+set -sg escape-time 1
 
 # ウィンドウのインデックスを1から始める
-#set -g base-index 1
+set -g base-index 1
 
 # ペインのインデックスを1から始める
-##setw -g pane-base-index 1
+setw -g pane-base-index 1
 #
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -46,45 +46,45 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #set -g default-terminal "screen-256color"
 #
 ## ステータスバーの色を設定する
-set -g status-fg white
-set -g status-bg black
+set -g status-fg "colour230"
+set -g status-bg "colour22"
 #
 ## ウィンドウリストの色を設定する
-#setw -g window-status-fg cyan
-#setw -g window-status-bg default
+setw -g window-status-fg "colour255"
+setw -g window-status-bg default
 #setw -g window-status-attr dim
 ## アクティブなウィンドウを目立たせる
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
+setw -g window-status-current-fg "colour255"
+setw -g window-status-current-bg "colour166"
+setw -g window-status-current-attr bright
 #
 ## ペインボーダーの色を設定する
-#set -g pane-border-fg green
+set -g pane-border-fg default
 #set -g pane-border-bg black
 ## アクティブなペインを目立たせる
 #set -g pane-active-border-fg white
-#set -g pane-active-border-bg yellow
+set -g pane-active-border-bg default
 #
 ## コマンドラインの色を設定する
-#set -g message-fg white
-#set -g message-bg black
-#set -g message-attr bright
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
 #
 ## ステータスバーを設定する
 ### 左パネルを設定する
-#set -g status-left-length 40
-#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left-length 40
+set -g status-left "#[fg=default]#S > #I > #P   "
 ### 右パネルを設定する
-#set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+set -g status-right "#[fg=default][%Y-%m-%d(%a) %H:%M]"
 ### リフレッシュの間隔を設定する(デフォルト 15秒)
-#set -g status-interval 60
-### ウィンドウリストの位置を中心寄せにする
-#set -g status-justify centre
+set -g status-interval 30
+### ウィンドウリストの位置を中心寄せに
+set -g status-justify left
 ## ヴィジュアルノーティフィケーションを有効にする
 #setw -g monitor-activity on
 #set -g visual-activity on
 ## ステータスバーを上部に表示する
-#set -g status-position top
+set -g status-position top
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
