--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,7 +45,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #setw -g mouse on
 #
 ## 256色端末を使用する
-#set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 #
 ## ステータスバーの色を設定する
 set -g status-fg "colour230"
@@ -90,12 +90,9 @@ set -g status-position top
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
-#setw -g mode-keys vi
-## クリップボード共有を有効にする
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
-## コピーモードの操作をvi風に設定する
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
+setw -g mode-keys vi
+# macのクリップボードと連携
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
