--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,7 +92,7 @@ set -g status-position top
 ## viのキーバインドを使用する
 setw -g mode-keys vi
 # macのクリップボードと連携
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 # 
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
