--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,12 @@
 # prefixキーをC-aに変更する
 #set -g prefix C-a
 
+set repeat-time 100
+
 # C-bのキーバインドを解除する
 #unbind C-b
 
-set -sg escape-time 1
+# set -sg escape-time 1
 
 # キーストロークのディレイを減らす
 set -sg escape-time 1
