--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,12 @@ set repeat-time 100
 # キーストロークのディレイを減らす
 set -sg escape-time 1
 
+# pane移動は毎回Prefixを押すようにする
+bind-key -T prefix Left		select-pane -L
+bind-key -T prefix Right	select-pane -R
+bind-key -T prefix Up		select-pane -U
+bind-key -T prefix Down		select-pane -D
+
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
 
