--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,9 +55,6 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 ## 256色端末を使用する
 set -g default-terminal "screen-256color"
 #
-## ステータスバーの色を設定する
-set -g status-fg "colour230"
-set -g status-bg "colour22"
 #
 ## ウィンドウリストの色を設定する
 setw -g window-status-fg "colour255"
@@ -81,14 +78,18 @@ set -g message-bg black
 set -g message-attr bright
 #
 ## ステータスバーを設定する
+## ステータスバーの色を設定する
+set -g status-fg "colour230"
+set -g status-bg "colour22"
 ### 左パネルを設定する
 set -g status-left-length 40
-set -g status-left "#[fg=default]#S > #I > #P   "
+set -g status-left "#S > #I > #P   "
 ### 右パネルを設定する
-set -g status-right "#[fg=default][%Y-%m-%d(%a) %H:%M]"
+set -g status-right-length 45
+set -g status-right "#H [%Y-%m-%d(%a) %H:%M]"
 ### リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 30
-### ウィンドウリストの位置を中心寄せに
+### ウィンドウリストの揃え方向
 set -g status-justify left
 ## ヴィジュアルノーティフィケーションを有効にする
 #setw -g monitor-activity on
