Update for linux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,6 +102,7 @@ set -g status-position top
 setw -g mode-keys vi
 # macのクリップボードと連携
 unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 # 
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+#set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux.osx.conf"
