--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,6 @@
 # prefixキーをC-aに変更する
 #set -g prefix C-a
 
-set repeat-time 100
 
 # C-bのキーバインドを解除する
 #unbind C-b
@@ -10,6 +9,7 @@ set repeat-time 100
 
 # キーストロークのディレイを減らす
 set -sg escape-time 1
+set -sg repeat-time 100
 
 # pane移動は毎回Prefixを押すようにする
 bind-key -T prefix Left		select-pane -L
