--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # prefixキーをC-aに変更する
 #set -g prefix C-a
 
-set repeat-time 100
+set -g repeat-time 100
 
 # C-bのキーバインドを解除する
 #unbind C-b
@@ -101,7 +101,7 @@ set -g status-position top
 ## viのキーバインドを使用する
 setw -g mode-keys vi
 # macのクリップボードと連携
-unbind -T copy-mode-vi Enter
+#unbind -T copy-mode-vi Enter
 #bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 # 
 #set -g default-command "reattach-to-user-namespace -l ${SHELL}"
