--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,8 +86,8 @@ set -g status-bg "colour22"
 set -g status-left-length 40
 set -g status-left "#S > #I > #P   "
 ### 右パネルを設定する
-set -g status-right-length 45
-set -g status-right "#H [%Y-%m-%d(%a) %H:%M]"
+set -g status-right-length 80
+set -g status-right '#($HOME/dotfiles/scripts/git_status_pane.sh 2>&1) #H [%Y-%m-%d(%a) %H:%M]'
 ### リフレッシュの間隔を設定する(デフォルト 15秒)
 set -g status-interval 30
 ### ウィンドウリストの揃え方向
