--- a/.tmux.conf
+++ b/.tmux.conf
@@ -103,3 +103,4 @@ set -g status-position top
 setw -g mode-keys vi
 
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.osx.conf"
+if-shell "uname | grep -q Linux" "source-file ~/dotfiles/.tmux.linux.conf"
