Update .tmux.conf to move panes of tmux and vim in the same way.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,14 @@ set -sg escape-time 1
 set -sg repeat-time 100
 
 # pane移動は毎回Prefixを押すようにする
-bind-key -T prefix Left		select-pane -L
-bind-key -T prefix Right	select-pane -R
-bind-key -T prefix Up		select-pane -U
-bind-key -T prefix Down		select-pane -D
+# Work vim with tmux
+# ref: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -T prefix Left if-shell "$is_vim" "send-keys C-w Left" "select-pane -L"
+bind-key -T prefix Right if-shell "$is_vim" "send-keys C-w Right" "select-pane -R"
+bind-key -T prefix Up if-shell "$is_vim" "send-keys C-w Up" "select-pane -U"
+bind-key -T prefix Down if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
 
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
