--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,10 @@ bind-key -T prefix Left if-shell "$is_vim" "send-keys C-w Left" "select-pane -L"
 bind-key -T prefix Right if-shell "$is_vim" "send-keys C-w Right" "select-pane -R"
 bind-key -T prefix Up if-shell "$is_vim" "send-keys C-w Up" "select-pane -U"
 bind-key -T prefix Down if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
+bind-key -T prefix h if-shell "$is_vim" "send-keys C-w Left" "select-pane -L"
+bind-key -T prefix l if-shell "$is_vim" "send-keys C-w Right" "select-pane -R"
+bind-key -T prefix k if-shell "$is_vim" "send-keys C-w Up" "select-pane -U"
+bind-key -T prefix j if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
 
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
