--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,7 @@
-# prefixキーをC-aに変更する
-#set -g prefix C-a
-
-set -g repeat-time 100
-
-# C-bのキーバインドを解除する
-#unbind C-b
-
-# set -sg escape-time 1
-
-# キーストロークのディレイを減らす
 set -sg escape-time 1
 set -sg repeat-time 100
 
-# pane移動は毎回Prefixを押すようにする
-# Work vim with tmux
+# Require prefix for moving between panes to work with vim
 # ref: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -21,93 +9,48 @@ bind-key -T prefix Left if-shell "$is_vim" "send-keys C-w Left" "select-pane -L"
 bind-key -T prefix Right if-shell "$is_vim" "send-keys C-w Right" "select-pane -R"
 bind-key -T prefix Up if-shell "$is_vim" "send-keys C-w Up" "select-pane -U"
 bind-key -T prefix Down if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
+
 bind-key -T prefix h if-shell "$is_vim" "send-keys C-w Left" "select-pane -L"
 bind-key -T prefix l if-shell "$is_vim" "send-keys C-w Right" "select-pane -R"
 bind-key -T prefix k if-shell "$is_vim" "send-keys C-w Up" "select-pane -U"
 bind-key -T prefix j if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
 
-# ウィンドウのインデックスを1から始める
-set -g base-index 1
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
-# ペインのインデックスを1から始める
-setw -g pane-base-index 1
-#
-# 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-#
-## C-a*2でtmux内のプログラムにC-aを送る
-#bind C-a send-prefix
-#
-## | でペインを縦に分割する
-#bind | split-window -h
-#
-## - でペインを横に分割する
-#bind - split-window -v
-#
-## Vimのキーバインドでペインを移動する
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
-#bind -r C-h select-window -t :-
-#bind -r C-l select-window -t :+
-#
-## Vimのキーバインドでペインをリサイズする
-#bind -r H resize-pane -L 5
-#bind -r J resize-pane -D 5
-#bind -r K resize-pane -U 5
-#bind -r L resize-pane -R 5
-#
-## マウス操作を有効にする
-#setw -g mouse on
-#
-## 256色端末を使用する
+
+set -g base-index 1
+setw -g pane-base-index 1
+
 set -g default-terminal "screen-256color"
-#
-#
-## ウィンドウリストの色を設定する
+
 setw -g window-status-fg "colour255"
 setw -g window-status-bg default
-#setw -g window-status-attr dim
-## アクティブなウィンドウを目立たせる
 setw -g window-status-current-fg "colour255"
 setw -g window-status-current-bg "colour166"
 setw -g window-status-current-attr bright
-#
-## ペインボーダーの色を設定する
 set -g pane-border-fg default
-#set -g pane-border-bg black
-## アクティブなペインを目立たせる
-#set -g pane-active-border-fg white
 set -g pane-active-border-bg default
-#
-## コマンドラインの色を設定する
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
-#
-## ステータスバーを設定する
-## ステータスバーの色を設定する
 set -g status-fg "colour230"
 set -g status-bg "colour22"
-### 左パネルを設定する
+
 set -g status-left-length 40
 set -g status-left "#S > #I > #P   "
-### 右パネルを設定する
+
 set -g status-right-length 80
 set -g status-right '#($HOME/dotfiles/scripts/git_status_pane.sh 2>&1) #H [%Y-%m-%d(%a) %H:%M]'
-### リフレッシュの間隔を設定する(デフォルト 15秒)
+
 set -g status-interval 30
-### ウィンドウリストの揃え方向
+
 set -g status-justify left
-## ヴィジュアルノーティフィケーションを有効にする
-#setw -g monitor-activity on
-#set -g visual-activity on
-## ステータスバーを上部に表示する
+
 set -g status-position top
 
-# コピーモードを設定する
-## viのキーバインドを使用する
 setw -g mode-keys vi
 
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.osx.conf"
