Update for moon

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ set -g status-left-length 40
 set -g status-left "#S > #I > #P   "
 
 set -g status-right-length 80
-set -g status-right '#($HOME/dotfiles/scripts/git_status_pane.sh 2>&1) #H [%Y-%m-%d(%a) %H:%M]'
+set -g status-right '#($HOME/.dotfiles/scripts/git_status_pane.sh 2>&1) #H [%Y-%m-%d(%a) %H:%M]'
 
 set -g status-interval 30
 
@@ -54,4 +54,4 @@ set -g status-position top
 setw -g mode-keys vi
 
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.osx.conf"
-if-shell "uname | grep -q Linux" "source-file ~/dotfiles/.tmux.linux.conf"
+if-shell "uname | grep -q Linux" "source-file ~/.tmux.linux.conf"
