Migrate tmux.conf -fg, -bg and -attr options into -style options

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,18 +26,12 @@ setw -g pane-base-index 1
 
 set -g default-terminal "screen-256color"
 
-setw -g window-status-fg "colour255"
-setw -g window-status-bg default
-setw -g window-status-current-fg "colour255"
-setw -g window-status-current-bg "colour166"
-setw -g window-status-current-attr bright
-set -g pane-border-fg default
-set -g pane-active-border-bg default
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-set -g status-fg "colour230"
-set -g status-bg "colour22"
+# https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
+setw -g window-status-style fg=colour255,bg=default
+setw -g window-status-current-style fg=colour255,bg=colour166,bright
+set -g pane-border-style fg=default,bg=default
+set -g message-style fg=white,bg=black,bright
+set -g status-style fg=colour230,bg=colour22
 
 set -g status-left-length 40
 set -g status-left "#S > #I > #P   "
