--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,11 +10,6 @@ bind-key -T prefix Right if-shell "$is_vim" "send-keys C-w Right" "select-pane -
 bind-key -T prefix Up if-shell "$is_vim" "send-keys C-w Up" "select-pane -U"
 bind-key -T prefix Down if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
 
-bind-key -T prefix h if-shell "$is_vim" "send-keys C-w Left" "select-pane -L"
-bind-key -T prefix l if-shell "$is_vim" "send-keys C-w Right" "select-pane -R"
-bind-key -T prefix k if-shell "$is_vim" "send-keys C-w Up" "select-pane -U"
-bind-key -T prefix j if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
-
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
@@ -35,7 +30,7 @@ set -g status-style fg=colour230,bg=colour22
 
 set -g status-left-length 40
 set -g status-left "#S > #I > #P   "
-
+ 
 set -g status-right-length 80
 set -g status-right '#($HOME/.dotfiles/scripts/git_status_pane.sh 2>&1) #H [%Y-%m-%d(%a) %H:%M]'
 
@@ -46,6 +41,9 @@ set -g status-justify left
 set -g status-position top
 
 setw -g mode-keys vi
-
+ 
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.osx.conf"
-if-shell "uname | grep -q Linux" "source-file ~/.tmux.linux.conf"
+# if-shell "uname | grep -q Linux" "source-file ~/.tmux.linux.conf"
+
+set-option -g default-shell "${SHELL}"
+set -g default-command "${SHELL}"
