--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,9 +30,9 @@ set -g status-style fg=colour230,bg=colour22
 
 set -g status-left-length 40
 set -g status-left "#S > #I > #P   "
- 
+
 set -g status-right-length 80
-set -g status-right '#($HOME/.dotfiles/scripts/git_status_pane.sh 2>&1) #H [%Y-%m-%d(%a) %H:%M]'
+set -g status-right '#H [%Y-%m-%d(%a) %H:%M]'
 
 set -g status-interval 30
 
@@ -41,7 +41,7 @@ set -g status-justify left
 set -g status-position top
 
 setw -g mode-keys vi
- 
+
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.osx.conf"
 # if-shell "uname | grep -q Linux" "source-file ~/.tmux.linux.conf"
 
