--- a/common/coc-settings.json
+++ b/common/coc-settings.json
@@ -5,5 +5,5 @@
     "focusable":false  },
   "hover.floatConfig":{
     "focusable":false  },
-    "coc.preferences.floatActions": false
+    "coc.preferences.floatActions": false,
 }
