True color support for tmux

--- a/common/tmux.conf
+++ b/common/tmux.conf
@@ -14,12 +14,14 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# Ctrl-B + r => Reload
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set -as terminal-overrides ",xterm*:RGB"
 
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
 setw -g window-status-style fg=colour255,bg=default
